--- a/package.json
+++ b/package.json
@@ -6,15 +6,15 @@
   "license": "UNLICENSED",
   "private": true,
   "dependencies": {
-    "@sap/cds": "9",
-    "express": "4"
+    "@sap/cds": "^9",
+    "express": "^4"
   },
   "engines": {
     "node": ">=20"
   },
   "devDependencies": {
-    "@cap-js/sqlite": "2",
-    "@cap-js/cds-types": "0.13.0"
+    "@cap-js/sqlite": "^2",
+    "@cap-js/cds-types": "^0.13.0"
   },
   "scripts": {
     "start": "cds-serve"
